# devflow

./: .cz.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVFLOW_PLAN.md  README.md  ROADMAP_UNIFIED_ENV.md  hk.pkl  llms-full.txt  llms.txt  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-pages.yml
.opencode/plans/: list-tree-and-shell-init.md  tui-redesign.md
crates/devflow-core/: Cargo.toml
crates/devflow-core/src/: agent.rs  database.rs  lib.rs  llm.rs
crates/devflow-core/src/config/: mod.rs
crates/devflow-core/src/docker/: discovery.rs  mod.rs
crates/devflow-core/src/hooks/: approval.rs  executor.rs  mod.rs  recipes.rs  template.rs  triggers.rs
crates/devflow-core/src/hooks/actions/: copy.rs  docker_exec.rs  http.rs  mod.rs  notify.rs  replace.rs  shell.rs  write_env.rs  write_file.rs
crates/devflow-core/src/merge/: checks.rs  mod.rs  train.rs
crates/devflow-core/src/sandbox/: command_guard.rs  landlock.rs  mod.rs  platform.rs  seatbelt.rs
crates/devflow-core/src/services/: factory.rs  local_docker.rs  mod.rs  orphan.rs  plugin.rs
crates/devflow-core/src/services/clickhouse/: local.rs  mod.rs
crates/devflow-core/src/services/generic/: mod.rs
crates/devflow-core/src/services/mysql/: local.rs
crates/devflow-core/src/services/postgres/: dblab.rs  mod.rs  neon.rs  template.rs  xata.rs
crates/devflow-core/src/services/postgres/local/: docker.rs  mod.rs  model.rs  reconcile.rs  state.rs
crates/devflow-core/src/services/postgres/local/storage/: mod.rs  zfs_driver.rs  zfs_setup.rs
crates/devflow-core/src/skills/: bundled.rs  cache.rs  installer.rs  manifest.rs  marketplace.rs  mod.rs  types.rs  user_installer.rs
crates/devflow-core/src/state/: local_state.rs  mod.rs
crates/devflow-core/src/vcs/: cow_worktree.rs  git.rs  jj.rs  mod.rs
crates/devflow-core/src/workspace/: create.rs  delete.rs  hooks.rs  mod.rs  switch.rs  worktree.rs
crates/devflow-proxy/: Cargo.toml
crates/devflow-proxy/src/: api.rs  ca.rs  discovery.rs  lib.rs  monitor.rs  network.rs  nss.rs  platform.rs  router.rs  server.rs  tls.rs
crates/devflow-terminal/: Cargo.toml
crates/devflow-terminal/src/: lib.rs
docs/: CLI.md  PROXY.md  SKILLS_MANAGEMENT_PLAN.md  index.html
docs/plans/: 2026-03-07-skills-management-design.md  2026-03-07-skills-management-plan.md  2026-03-08-gui-skills-bugfixes-plan.md  2026-03-08-per-project-skills-fixes-plan.md  2026-03-08-skills-tui-gui-integration-design.md  2026-03-08-skills-tui-gui-integration-plan.md  2026-03-08-user-scope-skills-design.md  2026-03-08-user-scope-skills-plan.md
examples/: agent-bootstrap.sh  agent-task.sh  django.devflow.yml  multi-service.devflow.yml  simple.devflow.yml
scripts/: generate-llms-txt.sh  integration-test.sh  sync-version.py
skills/devflow-brainstorming/: SKILL.md
skills/devflow-workspace-create/: SKILL.md
skills/devflow-workspace-list/: SKILL.md
skills/devflow-workspace-switch/: SKILL.md
src/: agent.rs  cli.rs  llm.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: branches.rs  config.rs  hooks.rs  mod.rs  projects.rs  proxy.rs  services.rs  settings.rs  skills.rs  terminal.rs  train.rs  workspaces.rs
src/cli/: agent.rs  commit.rs  config.rs  gc.rs  git_hook.rs  hook.rs  init.rs  mod.rs  plugin.rs  proxy.rs  service.rs  skill.rs  sync_ai_configs.rs  train.rs  workspace.rs
src/config/: mod.rs
src/docker/: mod.rs
src/hooks/: approval.rs  executor.rs  mod.rs  template.rs
src/services/: factory.rs  local_docker.rs  mod.rs  plugin.rs
src/services/clickhouse/: local.rs  mod.rs
src/services/generic/: mod.rs
src/services/mysql/: local.rs  mod.rs
src/services/postgres/: dblab.rs  mod.rs  neon.rs  template.rs  xata.rs
src/services/postgres/local/: docker.rs  mod.rs  model.rs  seed.rs
src/services/postgres/local/storage/: local_driver.rs  zfs_driver.rs
src/state/: local_state.rs  mod.rs
src/tui/: action.rs  app.rs  context.rs  event.rs  mod.rs  theme.rs
src/tui/components/: capabilities.rs  config_view.rs  doctor.rs  environments.rs  help.rs  hooks.rs  logs.rs  mod.rs  proxy_tab.rs  services_tab.rs  skills_tab.rs  system.rs  workspaces.rs
src/vcs/: cow_worktree.rs  git.rs  jj.rs  mod.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: AddProjectModal.tsx  AddServiceModal.tsx  ConfirmDialog.tsx  Layout.tsx  Modal.tsx  Terminal.tsx  TerminalPanel.tsx
ui/src/context/: TerminalContext.tsx
ui/src/pages/: Home.tsx  MergeTrainPage.tsx  SkillsPage.tsx
ui/src/pages/config/: ConfigEditor.tsx  YamlEditor.tsx
ui/src/pages/config/components/: FormField.tsx  TagList.tsx
ui/src/pages/config/sections/: AgentSection.tsx  BehaviorSection.tsx  CommitSection.tsx  DatabaseSection.tsx  ExecuteSection.tsx  GeneralSection.tsx  GitSection.tsx  MergeSection.tsx  ServicesSection.tsx  WorktreeSection.tsx
ui/src/pages/doctor/: DoctorPage.tsx
ui/src/pages/hooks/: HookEditModal.tsx  HookManager.tsx
ui/src/pages/projects/: ProjectDetail.tsx  ProjectList.tsx  ProjectSetup.tsx  ProjectSkillsTab.tsx
ui/src/pages/proxy/: ProxyDashboard.tsx
ui/src/pages/settings/: Settings.tsx
ui/src/types/: config.ts  index.ts
ui/src/utils/: invoke.ts  recentProjects.ts
