[package]
name = "devflow-app"
version = "0.3.1"
edition = "2021"
description = "devflow desktop application"
authors = ["Clément Tourrière <clement.tourriere@gmail.com>"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
devflow-core = { path = "../crates/devflow-core", features = ["skills"] }
devflow-proxy = { path = "../crates/devflow-proxy" }
devflow-terminal = { path = "../crates/devflow-terminal" }
base64 = "0.22"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
urlencoding = "2.1"
dirs = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
