[package]
name = "devflow-core"
version = "0.3.1"
edition = "2021"
description = "Core library for devflow — services, config, hooks, VCS, and state management"
authors = ["Clément Tourrière <clement.tourriere@gmail.com>"]
license = "MIT"

[features]
default = ["service-local", "service-neon", "service-dblab", "service-xata", "llm", "sandbox"]
service-local = ["dep:bollard", "dep:rusqlite", "dep:rust-s3", "dep:tar", "dep:bytes", "dep:futures-util", "dep:tempfile", "dep:url"]
service-neon = ["dep:reqwest"]
service-dblab = ["dep:reqwest"]
service-xata = ["dep:reqwest"]
llm = ["dep:reqwest"]
sandbox = ["dep:tempfile"]
sandbox-landlock = ["dep:landlock"]
skills = ["dep:reqwest", "dep:sha2"]

[dependencies]
# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_yaml_ng = { version = "0.10", default-features = false }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.46", default-features = false, features = ["rt", "rt-multi-thread", "net", "time", "macros", "process", "fs"] }

# Error handling
anyhow = "1.0"

# Async trait support
async-trait = "0.1"

# Git operations
git2 = { version = "0.20", default-features = false }

# Text matching
regex = { version = "1.11", default-features = false, features = ["std", "perf-cache"] }

# Template engine for hooks
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }

# File system
dirs = { version = "6.0", default-features = false }

# Logging
log = { version = "0.4", default-features = false, features = ["release_max_level_off"] }

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# SQLite for local backend state
rusqlite = { version = "0.38", default-features = false, features = ["bundled"], optional = true }

# UUID generation
uuid = { version = "1.15", features = ["v4", "serde"] }

# Glob pattern matching for merge checks
glob = { version = "0.3", default-features = false }

# HTTP client for cloud backends
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }

# URL parsing
url = { version = "2.5", optional = true }

# S3 support for data seeding
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"], optional = true }

# Temp files
tempfile = { version = "3.20", optional = true }

# Docker Engine API client
bollard = { version = "0.20", default-features = false, features = ["ssl", "pipe"], optional = true }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }

# Tar archive creation (for bollard upload_to_container)
tar = { version = "0.4", default-features = false, optional = true }

# Content hashing for skill versioning
sha2 = { version = "0.10", optional = true }

which = "8.0.0"

# Password input
rpassword = { version = "7.4", default-features = false }

# Terminal UI for interactive selection
inquire = { version = "0.9", default-features = false, features = ["crossterm"] }

# Ordered maps for deterministic hook execution
indexmap = { version = "2", default-features = false, features = ["serde"] }

# Cross-platform Copy-on-Write file copies (APFS clonefile, ioctl FICLONE, ReFS)
reflink-copy = "0.1"

# Work-stealing parallelism for directory copies
rayon = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }
